syntax = "proto3";
option go_package = "./src/proto";
import "google/protobuf/Empty.proto";

message HealthCheckResponse {
    bool ok = 1;
}

message CreateJiraTicketRequest {
    string title = 1;
    string description = 2;
    string name = 3;
}

message CreateJiraTicketResponse {
    bool success = 1;
    optional int32 id = 2;
}

message GetOneJiraTicketRequest {
    int32 id = 1;
}

message Ticket {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string name = 4;
}

message GetJiraTicketListResponse {
    repeated Ticket tickets = 1;
}

service JiraService {
    rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse);
    rpc CreateJiraTicket(CreateJiraTicketRequest) returns (CreateJiraTicketResponse);
    rpc GetOneJiraTicket(GetOneJiraTicketRequest) returns (Ticket);
    rpc GetAllJiraTicket(google.protobuf.Empty) returns (GetJiraTicketListResponse);
}